--- a/app/src/main/res/navigation/auth_nav_graph.xml
+++ b/app/src/main/res/navigation/auth_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/auth_nav_graph"
-    app:startDestination="@id/registerFragment">
+    app:startDestination="@id/registerOrLoginFragment">
 
     <fragment
         android:id="@+id/registerFragment"
@@ -15,7 +15,8 @@
             app:destination="@id/verificationFragment" />
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/registerOrLoginFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -24,7 +25,8 @@
         tools:layout="@layout/fragment_login" >
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
+            app:destination="@id/registerFragment"
+            app:popUpTo="@id/registerOrLoginFragment" />
     </fragment>
     <fragment
         android:id="@+id/verificationFragment"
@@ -44,5 +46,17 @@
             android:name="password"
             app:argType="string"
             app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerOrLoginFragment"
+        android:name="com.example.easy.fragments.RegisterOrLoginFragment"
+        android:label="fragment_register_or_login"
+        tools:layout="@layout/fragment_register_or_login" >
+        <action
+            android:id="@+id/action_registerOrLoginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_registerOrLoginFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
