--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -6,4 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".activities.ClientActivity">
 
+    <fragment
+        android:id="@+id/clientHostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/client_nav_graph"
+        tools:layout_editor_absoluteX="1dp" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@drawable/bottom_nav_background"
+        android:elevation="8dp"
+        app:itemPaddingBottom="10dp"
+        app:itemPaddingTop="10dp"
+        app:labelVisibilityMode="selected"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
