--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,20 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+   <!-- <style name="TabLayoutStyle" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">16sp</item> &lt;!&ndash; Customize text size if needed &ndash;&gt;
+        <item name="android:textColor">@color/white</item> &lt;!&ndash; Customize text color &ndash;&gt;
+    </style>-->
+    <style name="tabLayout_text" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/black</item>
+       <!-- <item name="fontFamily">@font/sf_pro_display</item>-->
+        <item name="textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="CustomOutlinedButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:background">@drawable/button</item>
+    </style>
+
     <style name="Theme.Easy" parent="Base.Theme.Easy" />
 </resources>
