--- a/app/src/main/res/layout/fragment_cat_one.xml
+++ b/app/src/main/res/layout/fragment_cat_one.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.categories.CatOneFragment">
+    tools:context=".fragments.client.categories.CatOneFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
