--- a/app/src/main/res/layout/job_information_item.xml
+++ b/app/src/main/res/layout/job_information_item.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="16dp"
-    app:cardBackgroundColor="#FAFDFF"
-    android:elevation="0dp">
+    app:cardElevation="0dp"
+    app:cardBackgroundColor="#e8deee"
+    >
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="88dp">
-
+        android:layout_height="100dp">
         <ImageView
-            android:id="@+id/img_best_deal"
+            android:id="@+id/job_image_item"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_marginStart="16dp"
@@ -23,54 +23,42 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_deal_product_name"
-            android:layout_width="80dp"
+            android:id="@+id/tv_job_title"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:text="Scotch Premium"
             android:textColor="@color/black"
-            android:textSize="9sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/img_best_deal"
-            app:layout_constraintTop_toTopOf="@id/img_best_deal" />
+            app:layout_constraintStart_toEndOf="@id/job_image_item"
+            app:layout_constraintTop_toTopOf="@id/job_image_item" />
 
         <TextView
-            android:id="@+id/tv_old_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-
-            android:text="$2000"
-
-            android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@id/tv_new_price"
-            app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name" />
-
-        <TextView
-            android:id="@+id/tv_new_price"
+            android:id="@+id/tv_job_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="$1600"
             android:textColor="@color/black"
-            android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@id/tv_deal_product_name"
-            app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name" />
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@id/tv_job_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_job_title" />
 
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/btn_see_product"
             android:layout_width="83dp"
             android:layout_height="28dp"
-            android:layout_marginStart="20dp"
+            android:layout_margin="16dp"
             android:background="@drawable/button"
             android:text="Read more"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="10dp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_deal_product_name"
-            app:layout_constraintTop_toTopOf="@id/tv_deal_product_name" />
+             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
