--- a/app/src/main/res/layout/special_item.xml
+++ b/app/src/main/res/layout/special_item.xml
@@ -16,42 +16,42 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/img_ad"
+            android:id="@+id/jobImageItem"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_ad_name"
+            android:id="@+id/tvJobTitle"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
             android:layout_marginTop="7dp"
-
             android:text="Scotch Premium"
             android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/img_ad"
-            app:layout_constraintTop_toTopOf="@id/img_ad" />
+            app:layout_constraintStart_toEndOf="@id/jobImageItem"
+            app:layout_constraintTop_toTopOf="@id/jobImageItem" />
 
         <TextView
-            android:id="@+id/tv_ad_price"
+            android:id="@+id/tvJobPrice"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:text="$1600"
             android:textColor="@color/black"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@id/tv_ad_name"
-            app:layout_constraintTop_toBottomOf="@id/tv_ad_name" />
+            app:layout_constraintStart_toStartOf="@id/tvJobTitle"
+            app:layout_constraintTop_toBottomOf="@id/tvJobTitle" />
 
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/btn_add_to_cart"
             android:layout_width="77dp"
             android:layout_height="25dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/button"
 
@@ -61,7 +61,7 @@
             android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_ad_price" />
+            app:layout_constraintTop_toBottomOf="@id/tvJobPrice" />
 
 
         <LinearLayout
