--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -27,7 +27,7 @@
         -
 
         <LinearLayout
-            android:id="@+id/linear_product_name"
+            android:id="@+id/linear_job_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -71,7 +71,7 @@
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_price"
-            app:layout_constraintTop_toBottomOf="@id/linear_product_name" />
+            app:layout_constraintTop_toBottomOf="@id/linear_job_name" />
 
         <TextView
             android:id="@+id/tv_price"
@@ -85,7 +85,7 @@
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/img_product"
-            app:layout_constraintTop_toBottomOf="@id/linear_product_name" />
+            app:layout_constraintTop_toBottomOf="@id/linear_job_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
