--- a/app/src/main/res/navigation/client_nav_graph.xml
+++ b/app/src/main/res/navigation/client_nav_graph.xml
@@ -9,12 +9,20 @@
         android:id="@+id/homeFragment"
         android:name="com.example.easy.fragments.client.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_detailsJobInfoFragment2"
+            app:destination="@id/detailsJobInfoFragment2" />
+    </fragment>
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.example.easy.fragments.client.SearchFragment"
         android:label="fragment_search"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_detailsJobInfoFragment2"
+            app:destination="@id/detailsJobInfoFragment2" />
+    </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.easy.fragments.client.ProfileFragment"
@@ -24,5 +32,18 @@
         android:id="@+id/orderFragment"
         android:name="com.example.easy.fragments.client.OrderFragment"
         android:label="fragment_order"
-        tools:layout="@layout/fragment_order" />
+        tools:layout="@layout/fragment_order" >
+        <action
+            android:id="@+id/action_orderFragment_to_detailsJobInfoFragment2"
+            app:destination="@id/detailsJobInfoFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailsJobInfoFragment2"
+        android:name="com.example.easy.fragments.client.DetailsJobInfoFragment"
+        android:label="fragment_details_job_info"
+        tools:layout="@layout/fragment_details_job_info" >
+        <argument
+            android:name="jobInfo"
+            app:argType="com.example.easy.data.JobInformation" />
+    </fragment>
 </navigation>
