--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -16,45 +16,37 @@
 
         <ImageView
             android:id="@+id/img_product"
-            android:layout_width="114dp"
-            android:layout_height="108dp"
+            android:layout_width="125dp"
+            android:layout_height="115dp"
             android:scaleType="fitCenter"
+            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        -
+
 
         <LinearLayout
             android:id="@+id/linear_job_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="@id/img_product"
             app:layout_constraintStart_toStartOf="@id/img_product"
             app:layout_constraintTop_toBottomOf="@id/img_product">
 
             <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_job_title"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
 
-                android:text="Chair"
+                android:text="Job"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/img_favorite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="16dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_favorite" />
 
         </LinearLayout>
 
@@ -63,28 +55,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
 
             android:text="$1600"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_price"
+            app:layout_constraintEnd_toEndOf="@+id/linear_job_name"
+            app:layout_constraintStart_toEndOf="@id/tv_job_location"
             app:layout_constraintTop_toBottomOf="@id/linear_job_name" />
 
         <TextView
-            android:id="@+id/tv_price"
+            android:id="@+id/tv_job_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="15dp"
-
-            android:text="$1600"
+            android:text="Location"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/img_product"
+            app:layout_constraintStart_toStartOf="@+id/linear_job_name"
             app:layout_constraintTop_toBottomOf="@id/linear_job_name" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
