--- a/app/src/main/res/layout/reset_possword_dialog.xml
+++ b/app/src/main/res/layout/reset_possword_dialog.xml
@@ -7,7 +7,7 @@
 
     <!-- Existing Views -->
     <TextView
-        android:id="@+id/tvResetPassword"
+        android:id="@+id/tvOrderEmployer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
@@ -26,8 +26,8 @@
         android:textStyle="bold"
         android:textSize="16sp"
         android:text="You will get your password reset link to email"
-        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
-        app:layout_constraintTop_toBottomOf="@id/tvResetPassword"
+        app:layout_constraintStart_toStartOf="@id/tvOrderEmployer"
+        app:layout_constraintTop_toBottomOf="@id/tvOrderEmployer"
         />
 
     <com.google.android.material.textfield.TextInputLayout
